add product screen grabs

--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
             </div>
           </div>
           <div class="column">
-            <figure class="image is-3by2">
-              <img src="https://bulma.io/images/placeholders/480x320.png" />
+            <figure class="image is-5by4">
+              <img src="./assets/images/hero-2.png" />
             </figure>
           </div>
         </div>
@@ -204,7 +204,7 @@
         <div class="columns is-gapless">
           <div class="column">
             <figure class="image is-3by2">
-              <img src="https://bulma.io/images/placeholders/480x320.png" />
+              <img src="./assets/images/shopcast-sf.png" />
             </figure>
           </div>
           <div class="column">
@@ -249,7 +249,7 @@
           </div>
           <div class="column">
             <figure class="image is-3by2">
-              <img src="https://bulma.io/images/placeholders/480x320.png" />
+              <img src="./assets/images/shopcast-dsb.png" />
             </figure>
           </div>
         </div>
