--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <div class="columns is-gapless">
           <div class="column">
             <figure class="image is-3by2">
-              <img src="./assets/images/shopcast-sf.png" />
+              <img src="./assets/images/shopcast-sf.png" class="image-shadow"/>
             </figure>
           </div>
           <div class="column">
@@ -249,7 +249,7 @@
           </div>
           <div class="column">
             <figure class="image is-3by2">
-              <img src="./assets/images/shopcast-dsb.png" />
+              <img src="./assets/images/shopcast-dsb.png" class="image-shadow"/>
             </figure>
           </div>
         </div>
@@ -337,6 +337,9 @@
               </li>
               <li>
                 <a href="" class="footer-link">Careers</a>
+              </li>
+              <li>
+                <a href="" class="footer-link">Site Credits</a>
               </li>
             </ul>
           </div>
