new background image, reorg old background imgs

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <a href="" class="mt-4 button-lg mobile-hide">Get Started</a>
             </div>
             <div class="column is-mobile">
-              <div class="hero-card">
+              <div class="hero-card blue-shadow">
                 <!-- <div class="hero-card-img"></div> -->
                 <figure class="image is-1by1">
                   <img src="./assets/images/hero-1.png" />
@@ -119,8 +119,8 @@
     </div>
 
     <div class="container is-max-widescreen">
-      <div class="box p-6 has-text-centered">
-        <h2 class="medium is-size-2">Your Store, Made Easy.</h2>
+      <div class="box p-6 has-text-centered blue-shadow">
+        <h2 class="medium is-size-2">Your Stores, Made Easy.</h2>
         <p class="card-subtitle is-size-4">
           Build online stores using simple configuration. Manage your orders,
           end-to-end.
@@ -136,10 +136,7 @@
             </div>
             <h4 class="card-subtitle mb-2">Content Management Ready</h4>
             <p>
-              When it comes to successful business, your customers (and
-              maintaining long-lasting relationships with them) are key. Launch
-              an e-commerce experience your audience will love, designed with UX
-              and self-service top-of-mind: a Sana web store.
+              Launch for retail, restauraunts, appointment-based booking, or even for subscription services.
             </p>
           </div>
           <div class="column">
@@ -152,11 +149,7 @@
             </div>
             <h4 class="card-subtitle mb-2">Your Process, Your Workflow</h4>
             <p>
-              Buyers, especially in B2B, are demanding online channels from
-              their preferred vendors. With Sana, you can offer your valued
-              clients a web store that always boasts great performance,
-              foolproof security, and real-time product, pricing, and customer
-              data direct from SAP ECC.
+              Plan and create processes using Workflow Builder for your desired routines.
             </p>
           </div>
           <div class="column">
@@ -167,10 +160,7 @@
             </div>
             <h4 class="card-subtitle mb-2">Customize With Ease</h4>
             <p>
-              Sana Commerce supports organizations looking to scale, evolve, or
-              embrace globalization – all without a hassle. Sana offers support
-              for multiple web stores, currencies, and selling models as well as
-              for high-volume traffic during peak periods.
+              Our themes are designed with great UX, but can also be customized with your branding.
             </p>
           </div>
         </div>
@@ -186,8 +176,8 @@
                 Choose a Plan and Get Started
               </h3>
               <p>
-                ShopCast offers free plans for individuals and small teams just
-                starting out. We also have new monthly plans for small business
+                ShopCast is free for individuals and small teams just
+                starting out. We also have plans for small business
                 with more advanced requirements. Learn more about our free,
                 small business, and premium subscriptions.
               </p>
