--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="navbar-item"> Tour </a>
           <a class="navbar-item"> Products </a>
           <a class="navbar-item"> Use Cases </a>
-          <a class="navbar-item"> Pricing </a>
+          <a class="navbar-item" href="./pricing.html"> Pricing </a>
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
@@ -48,13 +48,13 @@
     </nav>
 
     <div class="section-1">
-      <div class="cubes-background">
+      <div class="background-1">
         <div class="container p-6">
           <div class="columns is-tablet">
             <div class="column hero-left">
               <h1 class="hero-title">Blazing Fast Ecommerce.</h1>
               <h2 class="hero-subtitle">
-                Products move fast. Take control of your ecommerce fleet.
+                Internet moves fast. Take control of your ecommerce solution.
               </h2>
               <a href="" class="mt-4 button-lg mobile-hide">Get Started</a>
             </div>
@@ -65,7 +65,7 @@
                   <img src="./assets/images/hero-1.png" />
                 </figure>
                 <h3 class="hero-card-title">
-                  Empower your process. Confidence in your business.
+                  Build ecommerce solutions for your business.
                 </h3>
                 <p class="hero-card-subtitle mobile-hide">
                   Learn about new features and support offerings in our
@@ -120,7 +120,7 @@
 
     <div class="container is-max-widescreen">
       <div class="box p-6 has-text-centered blue-shadow">
-        <h2 class="medium is-size-2">Your Stores, Made Easy.</h2>
+        <h2 class="medium is-size-2">A platform built for growth.</h2>
         <p class="card-subtitle is-size-4">
           Build online stores using simple configuration. Manage your orders,
           end-to-end.
@@ -130,37 +130,39 @@
             <div class="is-flex is-horizontal-center">
               <figure class="image is-96x96 mb-4">
                 <img
-                  src="https://img.icons8.com/color/96/000000/small-business.png"
+                  src="https://img.icons8.com/color/192/000000/small-business.png"
                 />
               </figure>
             </div>
             <h4 class="card-subtitle mb-2">Content Management Ready</h4>
             <p>
-              Launch for retail, restauraunts, appointment-based booking, or even for subscription services.
+              Launch for retail, restauraunts, appointment-based booking, or
+              even for subscription services.
             </p>
           </div>
           <div class="column">
             <div class="is-flex is-horizontal-center">
               <figure class="image is-96x96 mb-4">
                 <img
-                  src="https://img.icons8.com/color/96/000000/serial-tasks.png"
+                  src="https://img.icons8.com/color/192/000000/roller-coaster.png"
                 />
               </figure>
             </div>
             <h4 class="card-subtitle mb-2">Your Process, Your Workflow</h4>
             <p>
-              Plan and create processes using Workflow Builder for your desired routines.
+              Plan and create processes using Workflow Builder for your
+              structured activities.
             </p>
           </div>
           <div class="column">
             <div class="is-flex is-horizontal-center">
               <figure class="image is-96x96 mb-4">
-                <img src="https://img.icons8.com/color/96/000000/maracas.png" />
+                <img src="https://img.icons8.com/color/192/000000/sprout.png" />
               </figure>
             </div>
-            <h4 class="card-subtitle mb-2">Customize With Ease</h4>
+            <h4 class="card-subtitle mb-2">Extensible & Developer Friendly</h4>
             <p>
-              Our themes are designed with great UX, but can also be customized with your branding.
+              Develop and integrate custom solutions to the ShopCast platform.
             </p>
           </div>
         </div>
@@ -176,10 +178,10 @@
                 Choose a Plan and Get Started
               </h3>
               <p>
-                ShopCast is free for individuals and small teams just
-                starting out. We also have plans for small business
-                with more advanced requirements. Learn more about our free,
-                small business, and premium subscriptions.
+                ShopCast is free for individuals and small teams just starting
+                out. We also have plans for small business with more advanced
+                requirements. Learn more about our free, small business, and
+                premium subscriptions.
               </p>
               <a href="" class="mt-4 button-lg">Choose a Plan</a>
             </div>
@@ -194,7 +196,7 @@
         <div class="columns is-gapless">
           <div class="column">
             <figure class="image is-3by2">
-              <img src="./assets/images/shopcast-sf.png" class="image-shadow"/>
+              <img src="./assets/images/shopcast-sf.png" class="image-shadow" />
             </figure>
           </div>
           <div class="column">
@@ -202,7 +204,7 @@
               <h3 class="medium is-size-2 mb-2">
                 ShopCast <span class="demibold">StoreFront</span>
               </h3>
-              <h4 class="medium is-size-4">
+              <h4 class="medium is-size-4 grid-subtitle">
                 Customize our handcrafted themes to your needs.
               </h4>
               <p>
@@ -221,7 +223,7 @@
               <h3 class="medium is-size-2 mb-2">
                 ShopCast <span class="demibold">Dashboard</span>
               </h3>
-              <h4 class="medium is-size-4">
+              <h4 class="medium is-size-4 grid-subtitle">
                 Work on big ideas, without the busywork.
               </h4>
               <p class="mb-2">
@@ -239,14 +241,17 @@
           </div>
           <div class="column">
             <figure class="image is-3by2">
-              <img src="./assets/images/shopcast-dsb.png" class="image-shadow"/>
+              <img
+                src="./assets/images/shopcast-dsb.png"
+                class="image-shadow"
+              />
             </figure>
           </div>
         </div>
       </div>
-      <div class="container has-text-centered gutterBottom">
+      <div class="container has-text-centered p-6 gutterBottom">
         <h1 class="medium footer-title">Get started with ShopCast today</h1>
-        <a href="" class="mt-4 button-lg">Get Started</a>
+        <a href="" class="mt-6 mb-6 button-lg">Get Started</a>
       </div>
     </div>
 
