--- a/pricing.html
+++ b/pricing.html
@@ -31,7 +31,7 @@
       </div>
       <div class="navbar-menu">
         <div class="navbar-start">
-          <a class="navbar-item"> Tour </a>
+          <a class="navbar-item" href="/"> Tour </a>
           <a class="navbar-item"> Products </a>
           <a class="navbar-item"> Use Cases </a>
           <a class="navbar-item"> Pricing </a>
@@ -46,37 +46,214 @@
       </div>
     </nav>
 
-    <div class="container">
-      <div class="columns">
-        <div class="column">
-          <div class="box pricing-card">
-            <h2 class="medium is-size-3">Starter</h2>
-            <h3 class="is-size-5">FOR INDIVIDUALS</h3>
-            <p>Manage tasks and personal to-dos:</p>
-            <ul>
-              <li>StoreFront</li>
-              <li>Dashboard</li>
-            </ul>
-          </div>
+    <div class="section-1">
+      <div class="background-2">
+        <div class="container p-6 has-text-centered">
+          <h1 class="medium page-title is-size-1">Pricing & Subscriptions</h1>
+          <h3 class="is-size-4">Choose a plan that's right for you.</h3>
         </div>
-        <div class="column">
-          <div class="box pricing-card">
-            <h2>Basic</h2>
-            <h3 class="is-size-5">FOR SMALL TEAMS</h3>
-            <p>Get the tools to grow your business:</p>
-          </div>
-        </div>
-        <div class="column">
-          <div class="box pricing-card">
-            <h2>Business</h2>
-            <h3 class="is-size-5">FOR LARGE TEAMS</h3>
-            <p>Advanced analytics and features to prepare you for the next level.</p>
+        <div class="container is-max-widescreen">
+          <div class="columns">
+
+            <div class="column">
+              <div class="box pricing-card-1 p-5">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-96x96 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/bicycle.png"
+                    />
+                  </figure>
+                </div>
+                <h2 class="demibold is-size-4">Starter</h2>
+                <div class="">
+                  <p class="medium mb-2">Core</p>
+                  <div class="is-flex">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">StoreFront</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Dashboard</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Workflow Builder</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Documentation</span>
+                  </div>
+                  <p class="medium mb-2 mt-4">Security</p>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Role management</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Audit log</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="column">
+              <div class="box pricing-card-2 p-5">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-96x96 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/helicopter.png"
+                    />
+                  </figure>
+                </div>
+                <h2 class="demibold is-size-4">Basic</h2>
+                <div class="">
+                  <p class="medium mb-2">Core</p>
+                  <div class="is-flex">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">StoreFront</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Dashboard</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Workflow Builder</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Documentation</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Cloud blueprints</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Video Guides</span>
+                  </div>
+                  <p class="medium mb-2 mt-4">Content</p>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">3 StoreFront themes</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Canada Post Snap Ship Integration</span>
+                  </div>
+                  <p class="medium mb-2 mt-4">Security</p>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Role management</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Audit log</span>
+                  </div>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">Two Factor Authentication</span>
+                  </div>
+                  <p class="medium mb-2 mt-4">Support</p>
+                  <div class="is-flex mt-2">
+                    <figure class="image is-24x24">
+                      <img
+                        src="https://img.icons8.com/color/48/000000/checked--v1.png"
+                      />
+                    </figure>
+                    <span class="pricing-list-item">SLAs</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+            
+            <div class="column">
+              <div class="box pricing-card-3 p-5">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-96x96 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/rocket.png"
+                    />
+                  </figure>
+                </div>
+                <h2 class="demibold is-size-4">Business</h2>
+                <p class="medium is-size-5">Coming Soon</p>
+              </div>
+            </div>
+
           </div>
         </div>
       </div>
     </div>
 
-    
     <footer class="footer">
       <div class="container is-max-widescreen">
         <div class="columns is-mobile is-multiline">
