remove .html extension from pricing href

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <a class="navbar-item"> Tour </a>
           <a class="navbar-item"> Products </a>
           <a class="navbar-item"> Use Cases </a>
-          <a class="navbar-item" href="./pricing.html"> Pricing </a>
+          <a class="navbar-item" href="./pricing"> Pricing </a>
         </div>
         <div class="navbar-end">
           <div class="navbar-item">
