fix mobile column view

--- a/pricing.html
+++ b/pricing.html
@@ -52,9 +52,8 @@
           <h1 class="medium page-title is-size-1">Pricing & Subscriptions</h1>
           <h3 class="is-size-4">Choose a plan that's right for you.</h3>
         </div>
-        <div class="container is-max-widescreen">
+        <div class="container p-6 is-max-widescreen">
           <div class="columns">
-
             <div class="column">
               <div class="box pricing-card-1 p-5">
                 <div class="is-flex is-horizontal-center">
