fix shadow on mobile

--- a/pricing.html
+++ b/pricing.html
@@ -55,7 +55,7 @@
         <div class="container p-6 is-max-widescreen">
           <div class="columns">
             <div class="column">
-              <div class="box pricing-card-1 p-5">
+              <div class="box pricing-card-1 p-5 shadow">
                 <div class="is-flex is-horizontal-center">
                   <figure class="image is-96x96 mb-4">
                     <img
@@ -120,7 +120,7 @@
             </div>
 
             <div class="column">
-              <div class="box pricing-card-2 p-5">
+              <div class="box pricing-card-2 p-5 shadow">
                 <div class="is-flex is-horizontal-center">
                   <figure class="image is-96x96 mb-4">
                     <img
@@ -235,7 +235,7 @@
             </div>
             
             <div class="column">
-              <div class="box pricing-card-3 p-5">
+              <div class="box pricing-card-3 p-5 shadow">
                 <div class="is-flex is-horizontal-center">
                   <figure class="image is-96x96 mb-4">
                     <img
