--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="navbar-menu">
         <div class="navbar-start">
           <a class="navbar-item"> Tour </a>
-          <a class="navbar-item"> Products </a>
+          <a class="navbar-item" href="./products"> Products </a>
           <a class="navbar-item"> Use Cases </a>
           <a class="navbar-item" href="./pricing"> Pricing </a>
         </div>
@@ -119,7 +119,7 @@
     </div>
 
     <div class="container is-max-widescreen">
-      <div class="box p-6 has-text-centered blue-shadow">
+      <div class="box p-6 has-text-centered">
         <h2 class="medium is-size-2">A platform built for growth.</h2>
         <p class="card-subtitle is-size-4">
           Build online stores using simple configuration. Manage your orders,
