fix typography on page title

--- a/products.html
+++ b/products.html
@@ -49,7 +49,7 @@
     <div class="section-1">
       <div class="background-3">
         <div class="container p-6 has-text-centered">
-          <h1 class="medium is-size-1 page-title mt-6">
+          <h1 class="demibold is-size-1 page-title mt-6">
             StoreFront & Dashboard
           </h1>
           <h3 class="is-size-3 mt-4">
@@ -109,7 +109,9 @@
           </div>
 
           <div class="container p-6 has-text-centered">
-            <h1 class="is-size-1 page-title">For all kinds of teams</h1>
+            <h1 class="demibold is-size-2 page-title">
+              For all kinds of teams
+            </h1>
             <h3 class="is-size-3 mt-4">
               Collaboration tools built-in with Dashboard
             </h3>
