--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 requirements. Learn more about our free, small business, and
                 premium subscriptions.
               </p>
-              <a href="" class="mt-4 button-lg">Choose a Plan</a>
+              <a href="./pricing" class="mt-4 button-lg">Choose a Plan</a>
             </div>
           </div>
           <div class="column">
@@ -212,7 +212,7 @@
                 and inspiration from successful stores to craft and find the
                 right look and feel for your store.
               </p>
-              <a href="" class="mt-4 button-lg">Learn More</a>
+              <a href="./products" class="mt-4 button-lg">Learn More</a>
             </div>
           </div>
         </div>
@@ -236,7 +236,9 @@
                 out-of-the-box workflow, or create with Workflow Builder to
                 match the way your team works.
               </p>
-              <a href="" class="mt-4 button-lg">Learn More</a>
+              <a href="./products.html#products-1" class="mt-4 button-lg"
+                >Learn More</a
+              >
             </div>
           </div>
           <div class="column">
