add icons for each section

--- a/products.html
+++ b/products.html
@@ -61,16 +61,22 @@
           <div class="columns is-gapless">
             <div class="column">
               <div class="container grid-box">
-                <h3 class="demibold is-size-2">Order fulfillment</h3>
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/shipped.png"
+                  />
+                </figure>
+                <h3 class="demibold is-size-2" id="products-1">
+                  Order fulfillment
+                </h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Get your orders out the door (Orders table)
+                  Get your orders out the door
                 </h4>
                 <p class="color-dark-blue">
                   Dashboard comes with an out-of-the-box solution for Order
                   fulfillment based on best practices for the fulfillment
                   process.
                 </p>
-                <a href="" class="mt-4 button-lg">Choose a Plan</a>
               </div>
             </div>
             <div class="column">
@@ -94,16 +100,20 @@
             </div>
             <div class="column is-">
               <div class="container grid-box">
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/track-order.png"
+                  />
+                </figure>
                 <h3 class="demibold is-size-2">Streamline shipping tasks</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Get your orders out the door (Order workflow)
+                  Get your orders out the door
                 </h4>
                 <p class="color-dark-blue">
                   Dashboard comes with an out-of-the-box solution for Order
                   fulfillment based on best practices for the fulfillment
                   process.
                 </p>
-                <a href="" class="mt-4 button-lg">Choose a Plan</a>
               </div>
             </div>
           </div>
@@ -120,6 +130,11 @@
           <div class="columns is-gapless">
             <div class="column">
               <div class="container grid-box">
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/agree-.png"
+                  />
+                </figure>
                 <h3 class="demibold is-size-2">Team up</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
                   Collaborate and get more done.
@@ -129,7 +144,6 @@
                   is doing what anywhere, anytime. Our visual boards keep
                   everyone up to date and working towards the same goal.
                 </p>
-                <a href="" class="mt-4 button-lg">Choose a Plan</a>
               </div>
             </div>
             <div class="column">
@@ -153,16 +167,20 @@
             </div>
             <div class="column is-">
               <div class="container grid-box">
-                <h3 class="demibold is-size-2">Meet the team</h3>
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/accompany.png"
+                  />
+                </figure>
+                <h3 class="demibold is-size-2">Contact book</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Get your orders out the door (Order workflow)
+                  Get your orders out the door
                 </h4>
                 <p class="color-dark-blue">
                   Dashboard comes with an out-of-the-box solution for Order
                   fulfillment based on best practices for the fulfillment
                   process.
                 </p>
-                <a href="" class="mt-4 button-lg">Choose a Plan</a>
               </div>
             </div>
           </div>
