--- a/products.html
+++ b/products.html
@@ -98,7 +98,7 @@
                 />
               </figure>
             </div>
-            <div class="column is-">
+            <div class="column">
               <div class="container grid-box">
                 <figure class="image is-96x96 mb-4">
                   <img
@@ -117,7 +117,58 @@
               </div>
             </div>
           </div>
+        </div>
 
+        <div class="bg-light-blue">
+          <div class="container p-6 mt-6 mb-6 has-text-centered">
+            <div class="columns">
+              <div class="column p-4">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-48x48 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/combo-chart.png"
+                    />
+                  </figure>
+                </div>
+                <h4 class="medium card-subtitle mb-2">Analytics</h4>
+                <p class="color-dark-blue">
+                  Export detailed information about your store, for sales,
+                  customers, and marketing.
+                </p>
+              </div>
+              <div class="column p-4 has-text-centered">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-48x48 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/survey.png"
+                    />
+                  </figure>
+                </div>
+                <h4 class="medium card-subtitle mb-2">Audit Trail</h4>
+                <p class="color-dark-blue">
+                  Complete visibility, security policies, and control across
+                  your process.
+                </p>
+              </div>
+              <div class="column p-4 has-text-centered">
+                <div class="is-flex is-horizontal-center">
+                  <figure class="image is-48x48 mb-4">
+                    <img
+                      src="https://img.icons8.com/color/192/000000/keyhole-shield.png"
+                    />
+                  </figure>
+                </div>
+                <h4 class="medium card-subtitle mb-2">Security</h4>
+                <p class="color-dark-blue">
+                  Stay secure with 2FA and configure permissions with policies
+                  and user groups.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
           <div class="container p-6 has-text-centered">
             <h1 class="demibold is-size-2 page-title">
               For all kinds of teams
@@ -165,21 +216,88 @@
                 />
               </figure>
             </div>
-            <div class="column is-">
+            <div class="column">
               <div class="container grid-box">
                 <figure class="image is-96x96 mb-4">
                   <img
                     src="https://img.icons8.com/color/192/000000/accompany.png"
                   />
                 </figure>
-                <h3 class="demibold is-size-2">Contact book</h3>
+                <h3 class="demibold is-size-2">Connect</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Get your orders out the door
+                  Know your resources
                 </h4>
                 <p class="color-dark-blue">
-                  Dashboard comes with an out-of-the-box solution for Order
-                  fulfillment based on best practices for the fulfillment
-                  process.
+                  Choose which contacts get added to your teams' shared address
+                  book.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="container">
+          <div class="container p-6 has-text-centered">
+            <h1 class="demibold is-size-2 page-title">
+              For all kinds of teams
+            </h1>
+            <h3 class="is-size-3 mt-4">
+              Collaboration tools built-in with Dashboard
+            </h3>
+          </div>
+
+          <div class="columns is-gapless">
+            <div class="column">
+              <div class="container grid-box">
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/agree-.png"
+                  />
+                </figure>
+                <h3 class="demibold is-size-2">Team up</h3>
+                <h4 class="medium is-size-4 grid-subtitle mb-2">
+                  Collaborate and get more done.
+                </h4>
+                <p class="color-dark-blue">
+                  Easily assign and prioritize tasks, share files, and see who
+                  is doing what anywhere, anytime. Our visual boards keep
+                  everyone up to date and working towards the same goal.
+                </p>
+              </div>
+            </div>
+            <div class="column">
+              <figure class="image">
+                <img
+                  class="image-render image-shadow"
+                  src="./assets/images/dashboard/board.png"
+                />
+              </figure>
+            </div>
+          </div>
+
+          <div class="columns is-gapless">
+            <div class="column">
+              <figure class="image">
+                <img
+                  class="image-render image-shadow"
+                  src="./assets/images/dashboard/teams.png"
+                />
+              </figure>
+            </div>
+            <div class="column">
+              <div class="container grid-box">
+                <figure class="image is-96x96 mb-4">
+                  <img
+                    src="https://img.icons8.com/color/192/000000/accompany.png"
+                  />
+                </figure>
+                <h3 class="demibold is-size-2">Connect</h3>
+                <h4 class="medium is-size-4 grid-subtitle mb-2">
+                  Know your resources
+                </h4>
+                <p class="color-dark-blue">
+                  Choose which contacts get added to your teams' shared address
+                  book.
                 </p>
               </div>
             </div>
