--- a/products.html
+++ b/products.html
@@ -238,11 +238,9 @@
 
         <div class="container">
           <div class="container p-6 has-text-centered">
-            <h1 class="demibold is-size-2 page-title">
-              For all kinds of teams
-            </h1>
+            <h1 class="demibold is-size-2 page-title">Workflow Builder</h1>
             <h3 class="is-size-3 mt-4">
-              Collaboration tools built-in with Dashboard
+              Create more efficient workflows without effort.
             </h3>
           </div>
 
@@ -251,17 +249,16 @@
               <div class="container grid-box">
                 <figure class="image is-96x96 mb-4">
                   <img
-                    src="https://img.icons8.com/color/192/000000/agree-.png"
+                    src="https://img.icons8.com/color/192/000000/parallel-tasks.png"
                   />
                 </figure>
-                <h3 class="demibold is-size-2">Team up</h3>
+                <h3 class="demibold is-size-2">Integrate & Automate</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Collaborate and get more done.
+                  Everything you need for smart processes
                 </h4>
                 <p class="color-dark-blue">
-                  Easily assign and prioritize tasks, share files, and see who
-                  is doing what anywhere, anytime. Our visual boards keep
-                  everyone up to date and working towards the same goal.
+                  Automated assignments, escalations, and notifications to
+                  increase speed and reduce error via Dashboard APIs.
                 </p>
               </div>
             </div>
@@ -269,7 +266,7 @@
               <figure class="image">
                 <img
                   class="image-render image-shadow"
-                  src="./assets/images/dashboard/board.png"
+                  src="./assets/images/dashboard/manage-order.png"
                 />
               </figure>
             </div>
@@ -280,7 +277,7 @@
               <figure class="image">
                 <img
                   class="image-render image-shadow"
-                  src="./assets/images/dashboard/teams.png"
+                  src="./assets/images/dashboard/order-control.png"
                 />
               </figure>
             </div>
@@ -288,16 +285,17 @@
               <div class="container grid-box">
                 <figure class="image is-96x96 mb-4">
                   <img
-                    src="https://img.icons8.com/color/192/000000/accompany.png"
+                    src="https://img.icons8.com/color/192/000000/serial-tasks.png"
                   />
                 </figure>
-                <h3 class="demibold is-size-2">Connect</h3>
+                <h3 class="demibold is-size-2">Adapt & Synchronize</h3>
                 <h4 class="medium is-size-4 grid-subtitle mb-2">
-                  Know your resources
+                  Keep everyone in-sync and focused
                 </h4>
                 <p class="color-dark-blue">
-                  Choose which contacts get added to your teams' shared address
-                  book.
+                  Simplify feedback and approval cycles via email integration or
+                  on-the-go mobile approval. Implement custom behaviour for each
+                  state change.
                 </p>
               </div>
             </div>
