add "live demo" link to index

--- a/index.html
+++ b/index.html
@@ -212,7 +212,11 @@
                 and inspiration from successful stores to craft and find the
                 right look and feel for your store.
               </p>
-              <a href="./products" class="mt-4 button-lg">Learn More</a>
+              <a
+                href="http://ecommerce-demo-boris.herokuapp.com"
+                class="mt-4 button-outline-lg"
+                >Live Demo</a
+              >
             </div>
           </div>
         </div>
